fix: 修复秒杀核心链路缺陷，完善兜底与容器化部署